@@ -28,6 +28,7 @@ CHANGELOG
 * Fix modify button being hidden to editors (fixes #901)
 * Fix overlap between map controls and label (fixes #883)
 * Fix translation of district in list filters (fixes #890)
+* Fix integrity error on land intersection on path update (fixes #897)
 
 
 0.20.9 (2013-10-30)
